app/assets/stylesheets/style.css
/* ... */
.rg-left span, .rg-right span {
    border-width: 0 1px;
    top: 50%;
    margin:  -10px 0 0 2.5px;
    height: 20px;
    width: 3px;
}

.rg-bottom {
    margin-bottom: -10px;
}

.rg-top {
    margin-top: -10px;
}

.rg-left {
    margin-left: -10px;
}

.rg-right {
    margin-right: -10px;
}


/*
    ======================================
    Source Documents
    ======================================
*/

.highlight-general {
    font-weight: bold;
}

/* .entity-menu {
    margin-left: 0 !important;
    margin-right: 0 !important;
    padding-left: 0 !important;
    padding-right: 0 !important;
    width: 20px !important;
    font-size: 16px !important;
}*/

/*
    ======================================
    Document List
    ======================================
*/

/* TODO clean */

#document div#documents-view, #document > div:first-child {
    height: 100%;
}
#document div#documents-view div.docs-ul {
    height: calc(100% - 90px);
    overflow: auto;
}

#document-list {
    padding-left: 30px;
}
#documents-view .repeated-item .meta-tooltip {
    display: none;
}
#documents-view .repeated-item:hover .meta-tooltip {
    display: block;
}

/*#document-list li.doc-list-highlight {
    font-weight: bold;
    list-style-image: url("assets/../../images/folder-opened-icon.png");
}

#document-list li.doc-list-no-highlight {
    font-weight: normal;
    list-style-image: url("assets/../../images/folder-closed-icon.png");
}*/

#document-list li a:hover {
    text-decoration: none;
}

#documents-view .metadata-button {
    margin-right: 0px;
    padding-right: 0px;
    margin-left: 0px;
    padding-left: 0px;
}

.docs-loading {
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    background: white;
    opacity: 0.5;
    text-align: center;
}

.no-sim-docs {
    margin-top: 20px;
    height: 100%;
    width: 100%;
    background: white;
    opacity: 0.5;
    text-align: center;
}

.docs-loading span {
    font-weight: bold;
    position: relative;
    top: 45%;
}

.md-content.md-show{
    height: auto !important;
}


.selected-entity {
  text-decoration: underline;
  /*color: #2759AC;*/
}

/*
    ======================================
    Bar Chart
    ======================================
*/

.chartBarchart-popover {
    max-height: 300px;
    overflow-y: auto;
}

/*
    ======================================
    Filters
    ======================================
*/

#filter-view > div:first-child {
    height: 100%;
}

#filterList {
	padding: 5px 5px;
	list-style-type: none;
    height: 80%;
}

.filterListItem {
	margin: 0 2px 2px 0;
	font-weight: normal;
}

/*
    ======================================
    Metadata
    ======================================
*/
#metadata {
    height: 100%;
}

#metadata-overview, #metadata_tabs, #metadata-overview2 {
    height: calc(100% - 74px);
}

#metadata_tabs .meta-chart-container {
    height: 100%;
    overflow: hidden;
}

#metadata_tabs .tab-content, #metadata-overview .tab-pane {
    height: 100%;
}

#metadata_tabs {
    height: calc(100% - 50px);
}

#metadata_tabs .tab-pane {
    height: 100%;
}

#metadata_tabs .scroll-chart {
    height: 100%;
    overflow-y: auto;
    overflow-x: hidden;
}

#metadata_tabs .meta-chart {
    height: 1000px;
}

@media(max-width: 1500px){
    .nav-tabs>li>a {
        font-size: 12px;
    }
}
@media(max-width: 1400px){
    .nav-tabs>li>a {
        font-size: 10px;
    }
}
/*
    ======================================
    Search
    ======================================
*/

#search-bar .suggestion-item {
    border-bottom: 1px solid #d7d7d7;
}

#search-bar #search-scroll {

}

#search-bar #search-group {

}

#search-bar #autocomplete {
    height: 500px;
    min-width: 348px;
    width: 24%;
    overflow: auto;
    position: absolute;
    border-bottom: 1px solid #ddd;
    z-index: -1;
}

#search-bar #autocomplete .list-group-item {
    padding: 5px 10px;
}

#search-bar .search-item-container{
    height: 32px;
}

#search-bar .search-item-container > span {
    position: relative;
    top: -8px;
    left: 5px;
}

.autocomplete-left {
    float: left;
}

/*
    ======================================
    History
    ======================================
*/

.rep-item {
    border-right: 1px solid #ddd;
    box-sizing: border-box;
    display: inline-block;
    text-align: center;
    transition: width 0.3s linear;
    width: auto;
    padding: 3px !important;
    background: #f0f0f0;
    border-radius: 3px;
    margin: 5px 5px 0 5px;
}

#history .md-virtual-repeat-container .md-virtual-repeat-scroller {
    overflow-x: scroll !important;
}
#history .md-button.md-icon-button {
    margin: 0;
}

/*#history {
    margin-left: 10px;
}

ul#historyList {
    white-space : nowrap;
    display: inline-block;
    padding: 3px 10px;
    margin: 0 0 0 10px;
}*/

/* TODO: calculate remaining space for items */
/*#historyList > li {
    background-color: #2759AC;
    cursor: pointer;
    white-space: nowrap;
    display: inline-block;
    padding: 7px 10px;
    color: white;
    transition: width 0.3s linear;
    width: 47px;
    width: auto;
}
#historyList > li:hover {
    transition: width 0.2s linear;
    width: 150px;
    width: auto;
}

#historyList li span {
    margin-left: 5px;
}

#historyList li i {
    color: white;
}

#historyList li i.type-icon {
    font-size: 16px;
}

#historyList li i.action-icon {
    font-size: 8px;
}

#historyList .popover-title {
    color: white;
    background-color: #2759AC;
}*/

/*
    ======================================
    Generic
    ======================================
*/

.btn-primary {
  background-color: #2759AC;
}

.btn-small {
    padding: 4px 6px;
}

.list-header {
    height: auto;
    font-size: 12px;
    color: rgba(0, 0, 0, 0.54);
}
/* ... */

